finishing touches (spelling and validation)

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -30,22 +31,24 @@
 
     <h2> Learn to Knit! </h2>
     <div class="homeside">
-    <section id="intro">
-    <p class="intro-body"> Learn the basics of knitting. As the pandemic continues on, why not learn how to make items for yourself and for your family? Here you'll learn about the materials and techniques needed to make impressive, yet simple knitted projects. <p/>
-    <p class="intro-body"> Take our <a href="project-ideas.html">interactive quiz</a> to fin out which project you should do. Also stick around to learn about the history of knitting and how it differs from crocheting. <p/>
+    <div id="intro">
+    <p class="intro-body"> Learn the basics of knitting. As the pandemic continues on, why not learn how to make items for yourself and for your family? Here you'll learn about the materials and techniques needed to make impressive, yet simple knitted projects. </p>
+    <p class="intro-body"> You will also learn a little about the history of knitting. Test your knowledge with our <a href="project-ideas.html">interactive quiz</a> to see how much you know. Also stick around to learn how knitting differs from crocheting. </p>
 
     <img id="home-img" src="websitecoverphoto.jpg" alt="Eight stacked balls of yarn of multiple colors with a pair of knitting needles stuck in the center yarn ball." />
-    </section>
+  </div>
 
 
-  <section class="popup">
+  <div class="popup">
     <h2>Knitting Patterns</h2>
 
     <img src="hat.JPG" alt="A green knitted hat." />
 
-    <p> We have four knitting patterns that a great for beginingers and fun for experienced knitters.</p>
+    <p> We have four knitting patterns that are great for beginingers and fun for experienced knitters.</p>
 
-  </section>
+    <p> The patterns include a beanie as pictured above and other cold weather items. </p>
+
+  </div>
   </div>
 
 </body>
