--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -29,7 +30,7 @@
 
   <section >
     <h2> Knitting Basics </h2>
-    <p class="body"> There are a few aspects of knitting you will need to get acquainted with before you can pick up the needles and start knitting. First we’ll go over what materials you need and then teach you how to get started.</p>
+    <p class="body"> There are a few aspects of knitting you will need to get acquainted with before you can pick up the needles and start knitting. First, we’ll go over what materials you need and then teach you how to get started.</p>
   </section>
 
   <section>
@@ -38,7 +39,7 @@
     <div class="popup-materials">
       <img src="needles.JPG" alt="Two pairs of knitting needles, the front ones are wooden and the back ones are a purple metal pair." />
       <strong> Knitting needles </strong>
-      <p> Knitting needles come in many sizes and shapes. For beginners I suggest getting flat needles in size of 8, which works great for medium weight yarn. There are other needles such as double pointed needles and in-the-round needles, but for this site we will work with flat needles. </p>
+      <p> Knitting needles come in many sizes and shapes. For beginners I suggest getting flat needles in size of 8, which works great for medium weight yarn. There are other needles such as double pointed needles and in-the-round needles, but for this site we will work with flat needles  and in-the-round needles. </p>
     </div>
     <div class="popup-materials">
       <img src="yarnneedles.JPG" alt="Four small yarn needles, like sewing needles, but dull and larger. There are four in the picture. " />
@@ -62,7 +63,7 @@
   </div>
     <strong> Casting On </strong>
     <p class="body">First, tie a slip knot on one of the needles. The yarn leading to the ball of yarn is you leading strand, and the other end is your tail. Hold the needle in your right hand and drop the leading strand of yarn over your left thumb and forefinger, the yarn leading to the needle over your forefinger. </p>
-    <p  class="body">Hold the yarn draped over your thumb and leading to the ball of yarn with pinky and ring finger. Pull the needle around you forefinger towards your palm, making a triangle with the yarn.</p>
+    <p  class="body">Hold the yarn draped over your thumb and leading to the ball of yarn with pinky and ring finger. Pull the needle around your forefinger towards your palm, making a triangle with the yarn.</p>
     <p class="body"> Then tuck the needle under the yarn pinned by your pinky and forefinger. Drop the yarn from your fingers and pull the yarn tight, you should have made a loop around your needle. </p>
     <p class="body">Repeat this until you have the desired number of stiches, not counting the slip knot ties at the beginning.  </p>
 
@@ -75,7 +76,7 @@
     <div>
     <strong> Knit Stitch </strong>
     <p class="body">Hold the needle with the stiches in your left hand and hold your free needle in your right hand. Stick your right needle into the first stitch of your cast on row, inserting the needle from the bottom of the stich and up. Wrap the yarn counterclockwise around to the front of the free needle, not fully making a loop. </p>
-    <p class="body">Then, slide the right needle down while holding the newly created stich on the needle. Turn the right needle sideways as you do and pull the new loop through the original stitch on the needle. Your right-hand needle will end-up in front of needle holding all the stiches in your left hand.</p>
+    <p class="body">Then, slide the right needle down while holding the newly created stich on the needle. Turn the right needle sideways as you do and pull the new loop through the original stitch on the needle. Your right-hand needle will end up in front of needle holding all the stiches in your left hand.</p>
     <p class="body"> Next, pull the stich slipped through the new stich off the needle using your right-hand needle. Pull the leading yarn to tighten. </p>
     <p class="body">Then continue this pattern across all of your stiches on the left-hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. Use the images above to help guide you.</p>
     </div>
@@ -88,10 +89,10 @@
 
     <div>
     <strong> Purl Stitch</strong>
-    <p class="body">Start as you would for the knit stich, but instead of having the leading strand yarn hang behind the needle, pull it to the front. Insert your needle through the first stitch from top to bottom, keeping the right-hand needle in front of the left. </p>
+    <p class="body">Start as you would for the knit stich, but instead of having the leading strand of yarn hang behind the needle, pull it to the front. Insert your needle through the first stitch from top to bottom, keeping the right-hand needle in front of the left. </p>
     <p  class="body">Wrap the yarn around the needle counterclockwise starting from the top, this should again make half a loop around your right-hand needle. </p>
     <p class="body">Then bring the tip of the needle back through the original stich, keeping the new stich wrapped around the needle, this will pull it through the loop.</p>
-    <p class="body"> Next, pull the old stitch of the needle in your left hand using the right needle. Pull the leading strand to tighten and repeat. </p>
+    <p class="body"> Next, pull the old stitch off the needle in your left hand using the right needle. Pull the leading strand to tighten and repeat. </p>
     </div>
 
     <div class="how-to-img">
