--- a/project-ideas.html
+++ b/project-ideas.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -30,44 +31,44 @@
   </nav>
 
 <div class="projectheader">
-  <img id="header" src="hat.JPG" alt="A green knitted hat." />
-  <img id="header" src="cowl.JPG" alt="A multicolored knitted infinity scarf, or cowl." />
-  <img id="header" src="scarf.JPG" alt="A hot pink knitted scarf." />
-  <img id="header" src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
+  <img class="header" src="hat.JPG" alt="A green knitted hat." />
+  <img class="header" src="cowl.JPG" alt="A multicolored knitted infinity scarf, or cowl." />
+  <img class="header" src="scarf.JPG" alt="A hot pink knitted scarf." />
+  <img class="header" src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
 </div>
 
   <h2> Project Ideas </h2>
-  <p class="body">If looking for something more fun than knitting a small square, check out the patterns below. These are some of my favorites, and while being easy they are interesting enough to keep coming back to. If you aren’t sure where to start, take the quiz at the bottom of the page to find out.</p>
+  <p class="body">If looking for something more fun than knitting a small square, check out the patterns below. These are some of my favorites, and while being easy, they are interesting enough to keep coming back to. </p>
 
   <h2>Knitting Patterns</h2>
 
-  <section class="knitpattern">
+  <div class="knitpattern">
     <div class="popup-pattern">
       <img src="scarf.JPG" alt="A hot pink knitted scarf." />
       <strong> Scarf </strong>
-      <p> A scarf may seem like one of the simplest projects to make, and in one sense it is. However, a scarf is difficult in that you have to be consistent with your stiches the whole time, no dropped or split stiches (these we will look like holes or change the width of your scarf).</p>
-      <p>A scarf is simple in that you don’t really need a pattern for it, however it is nice to have some guidance on how wide to make it. For my scarfs I like to cast on 35 stiches using medium yarn and knitting with size 8 needles. Remember, the size of your needles will impact how large your stiches are, and change the width of the project. You can use smaller needles for a tighter stich, just make sure to knit a swatch to see how many stiches you will need to get your desired width. </p>
+      <p> A scarf may seem like one of the simplest projects to make, and in one sense it is. However, a scarf is difficult in that you have to be consistent with your stiches the whole time, no dropped or split stiches (these will look like holes or change the width of your scarf).</p>
+      <p>A scarf is simple in that you don’t really need a pattern for it; however it is nice to have some guidance on how wide to make it. For my scarfs I like to cast on 35 stiches using medium yarn and knitting with size 8 needles. Remember, the size of your needles will impact how large your stiches are and change the width of the project. You can use smaller needles for a tighter stich, just make sure to knit a swatch to see how many stiches you will need to get your desired width. </p>
       <p>A basic scarf is easy in that you only need to use one stich the whole time: the knit stich. Knit the scarf to the desired length and then cast-off.</p>
     </div>
     <div class="popup-pattern">
       <img src="hat.JPG" alt="A green knitted hat." />
       <strong> Hat </strong>
-      <p> I flat knit hat is almost as easy to make as a basic scarf. You will knit a rectangle, sew-up the side with the yarn needle, and then use the needle to gather the top.</p>
-      <p>Again, use size 8 needles and medium weight yarn. Cast on 72 stiches and use the knit stitch. Work the piece until it is 12 inches long and cast-off keeping the tail very long.</p>
+      <p> Flat knitting hat is almost as easy to make as a basic scarf. You will knit a rectangle, sew-up the side with the yarn needle, and then use the needle to gather the top.</p>
+      <p>Again, use size 8 needles and medium weight yarn. Cast on 72 stiches and use the knit stitch. Work the piece until it is 12 inches long and cast-off, keeping the tail very long.</p>
       <p>Thread the yarn needle and stich up the side of the piece. Make sure to loop through the bottom of one stich and over the top of the stich on the other side of the piece to blend in to the stiches.</p>
-      <p>Once you have sewn up the entire hat, thread the needle through the long tail at the top of the piece. Then synch together the top. I gather the top by stitching in the circle directly in the middle, creating two circles with one stich separating them. Then bring in the furthers section of those circles and slowly gather the top like that. </p>
+      <p>Once you have sewn up the entire hat, thread the needle through the long tail at the top of the piece. Then cinch together the top. I gather the top by sewing circle together directly in the middle with one stich, creating two circles with one stich separating them. Then bring in the further section of those circles and slowly gather the top, repeating the cycle. </p>
     </div>
     <div class="popup-pattern">
       <img src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
       <strong> Slippers </strong>
       <p> This pattern, from favecrafs, is slightly more complicated in that you will combine stiches and sewing up a piece.</p>
       <p>You will need two balls of medium weight yarn, as you will knit both strands together, working like you would if they were one piece of yarn. Fun tip: use two different colors of yarn to get an interesting combination. This will also require size 10 knitting needles. Since you are working with thicker yarn (the two pieces together) you will need to have larger stiches to keep normal stich size.</p>
-      <p>Another complicating element of this is that since it is a shoe, it comes in three different sizes.  I will explain the pattern in the small size and put the stich counts for the medium and large size in parentheses.</p>
+      <p>Another complicating element of this is that since it is a shoe, it comes in three different sizes.  I will explain the pattern in the small size and put the stich counts for the medium and large size in parentheses listed in that order.</p>
       <p>Start by casting on 29 (35-41) stiches, making sure to do so with both strands of yarn. This will form the heel of the shoe. The knitting pattern that follows will make groves on one side that allow you to fold up the piece.</p>
       <p>Knit across row one (one full set of stiches from a needle). Then knit 9 (11-13), purl one, knit 9 (11-13), purl one, and knit 9 (11-13). Repeat these two rows until you have 15 (17-19) ridges on the starting side, the pattern repeated 15(17-19) times. This completes the heel.</p>
       <p>For the toe, knit one stitch, purl the next and so on for row one. For row two purl one stitch, knit the next stitch. Repeat these two rows 12 (14-16) more times. This creates ribbing like the cuff of a sweater. Work the first row of this pattern one time and cut the yarn leaving a long tail (8 inches or longer). Do not cast off!</p>
       <p>To finish the piece, thread the long tail through the yarn needle. Then, thread the yarn trough the center of the loops. Next, stitch together to sides of the ribbing, forming the toe of the shoe.</p>
-      <p>After that, fold the heel in half along the seam you casted on. Stitch this side. The ridges that you created along the heel should be on the outside of the shoe.</p>
+      <p>After that, fold the heel in half along the seam you casted on. Sew up the seam created by the fold. You should be left with a whole in the top you can put your foot into. The ridges that you created along the heel should be on the outside of the shoe.</p>
       <p>Now do all of this again to cover the other foot!</p>
     </div>
     <div class="popup-pattern">
@@ -75,12 +76,12 @@
       <strong> Cowl </strong>
       <p> This last pattern will serve as a great introduction to working with circular needled.</p>
       <p>This will require a size 8 circular needle and medium weight yarn. To get the unique bumpy look we will be combining the knit and purl stitch like the ribbing for the slippers but offsetting them by one on alternating rows. This is called the seed stich.</p>
-      <p>Cast on 115 stiches on to your circular needles. Take the needle with the leading yarn and hold it in your right hand. Evenly distribute the stiches across the needle so you are able to work with stiches on the other needle, which you will hold in your left hand.</p>
-      <p>Before you start knitting mark this spot as the beginning of the piece. You can get stich markers, or you can use a safety pin (this is what I did when I first made this). Put this marker on your right needle. </p>
+      <p>Cast on 114 stiches on to your circular needles. You can also customize this length to your preference, just measure by creating a swatch and make sure the pattern ends in an even number. Take the needle with the leading yarn and hold it in your right hand. Evenly distribute the stiches across the needle so you are able to work with stiches on the other needle, which you will hold in your left hand.</p>
+      <p>Before you start knitting mark this spot as the beginning of the piece. You can get stich markers, or you can use a safety pin (I did that when I first made this). Put this marker on your right needle. </p>
       <p>Now, beginning knitting the piece. For row one you will knit one, purl one, knit one until you reach the end of the row knitting up to the stich marker. On the second row purl one, knit one, purl one until you get to the end. </p>
       <p>Repeat this pattern until your scarf is 11 inches in length, then cast off. </p>
     </div>
-  </section>
+  </div>
 
 </body>
 </html>
