--- a/what-is-knitting.html
+++ b/what-is-knitting.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -32,11 +33,11 @@
 
   <strong>History of Knitting</strong>
 
-  <p class="body"> Knitting is the process of knotting one strand of yarn together to form a fabric. This was easier to do than other forms of creating fabric, such as weaving, because it required fewer and smaller tools. Knitting has been around for centuries, back as far as the 11th century. Many historians believe that knitting originated in the middle east. Knitting came to American with European colonization.  </p>
+  <p class="body"> Knitting is the process of knotting one strand of yarn together to form a fabric. This was easier to do than other forms of creating fabric, such as weaving, because it required fewer and smaller tools. Knitting has been around for centuries, back as far as the 11th century. Many historians believe that knitting originated in the Middle East. Knitting came to American with European colonization.  </p>
 
   <img class="history" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
 
-  <p class="body"> Knitting became mechanized in the 1500s in France during the Industrial Revolution. However, it wasn’t until the 1800s that knitting moved to factories after the invention of a steam powered knitting machine. This is when knitting became more of a hobby than a necessity. </p>
+  <p class="body"> Knitting became mechanized in the 1500s in France during the Industrial Revolution. However, it wasn’t until the 1800s that knitting moved to factories after the invention of a steam powered knitting machine. This is when knitting became more of a hobby and less of a necessity. </p>
 
   <strong>How is it differnet from crocheting? </strong>
 
@@ -44,7 +45,7 @@
 
   <img class="history" src="crochetinghooks.jpg" alt="Three crocheting hooks lay one in front of the other, each a different color, but all about the same size. You only see the top half of the hooks, not the whole tool." />
 
-  <p class="body"> As for which is better, that is up to personal preference. Crocheting is actually easier and faster then knitting. Since it only requires on tool it is a lot easier for people to pick up and cheaper to start. While knitting does take more time and costs more money because of the need for more tools, it can create more complicated designs.  </p>
+  <p class="body"> As for which is better, that is up to personal preference. Crocheting is actually easier and faster than knitting. Since crocheting only requires one tool, it is a lot easier for people to pick up and cheaper to start. While knitting does take more time and costs more money because of the need for more tools, it can create more complicated designs.  </p>
 
   <h2>Quiz: What project should you do?</h2>
   <form>
@@ -60,7 +61,7 @@
 	</form>
 
 	<form>
-	   <h3>When did knitting become a hobby and not a necessity for making clothes?</h3>
+	   <h3>When did knitting become a hobby and not a necessity for making fabric?</h3>
      <div><input id="colonizationofamerica" type="radio" name="columns" value="colonizationofamerica">
      <label for="colonizationofamerica">During colonization of America</label></div>
 
@@ -72,7 +73,7 @@
 	</form>
 
 	<form>
-	   <h3>What makes knitting and crocheting basically the same?</h3>
+	   <h3>What makes knitting and crocheting very similar?</h3>
      <div><input id="fabric" type="radio" name="columns" value="fabric">
      <label for="fabric">Both use two needles to create fabric</label></div>
 
