edits to alt text

--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -96,9 +96,9 @@
     </div>
 
     <div class="how-to-img">
-    <img class="how-to" src="castoff2.JPG" alt="Left needle is going through the second stich on the right needle." />
+    <img class="how-to" src="castoff2.JPG" alt="Left needle is about to go through the second stich on the right needle." />
     <img class="how-to" src="castoff3.JPG" alt="Left needle is through the second stich on the right needle." />
-    <img class="how-to" src="castoff4.JPG" alt="Left needle has dropped the second stich over the first stich on the needle leaving only one stich left on the right needle." />
+    <img class="how-to" src="castoff4.JPG" alt="Left needle has dropped the second stich over the first stich on the needle, leaving only one stich left on the right needle." />
     </div>
 
     <div>
