--- a/project-ideas.html
+++ b/project-ideas.html
@@ -34,7 +34,7 @@
   <img class="header" src="hat.JPG" alt="A green knitted hat." />
   <img class="header" src="cowl.JPG" alt="A multicolored knitted infinity scarf, or cowl." />
   <img class="header" src="scarf.JPG" alt="A hot pink knitted scarf." />
-  <img class="header" src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
+  <img class="header" src="slippers.JPG" alt="A pair of knitted slippers that are green and grey." />
 </div>
 
   <h2> Project Ideas </h2>
@@ -59,7 +59,7 @@
       <p>Once you have sewn up the entire hat, thread the needle through the long tail at the top of the piece. Then cinch together the top. I gather the top by sewing circle together directly in the middle with one stich, creating two circles with one stich separating them. Then bring in the further section of those circles and slowly gather the top, repeating the cycle. </p>
     </div>
     <div class="popup-pattern">
-      <img src="slippers.JPG" alt="Two pairs of knitted slippers. One on the left brown and one on the right pink." />
+      <img src="slippers.JPG" alt="A pair of knitted slippers that are green and grey." />
       <strong> Slippers </strong>
       <p> This pattern, from favecrafs, is slightly more complicated in that you will combine stiches and sewing up a piece.</p>
       <p>You will need two balls of medium weight yarn, as you will knit both strands together, working like you would if they were one piece of yarn. Fun tip: use two different colors of yarn to get an interesting combination. This will also require size 10 knitting needles. Since you are working with thicker yarn (the two pieces together) you will need to have larger stiches to keep normal stich size.</p>
